fb addign some trouble to  simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 Copyright 2014 Git. Training
-Silly changes for master branch
+This will be a conflicting line
 -->
 <head>
 
