--- a/simple.html
+++ b/simple.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!--
 Copyright 2014 Git. Training
-Adding changes before rebasing conflicts
+Silly changes for master branch
 -->
 <head>
 
 
-	<title>A Great Website</title>
+	<title>Silly Changes on Master </title>
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
@@ -19,14 +19,15 @@ Adding changes before rebasing conflicts
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Goes Here -->
 		<p>
 
-			I am not sure what will go here, but I am sure it will be nice
+			Just some content,
+			not sure if we shuld replace it 
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Carl  2014</p>
+		<p>&copy; paco  2014</p>
 
 	
 
