adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@ This will be a conflicting line
 <head>
 
 
-	<title>Silly Changes on Master </title>
+	<title>Lots of Trouble in a little repo </title>
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
